--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.4
+          go-version: "1.23.4"
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v6.1.1
